; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_ftwdt010_wdt.c_ftwdt010_wdt_interrupt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_ftwdt010_wdt.c_ftwdt010_wdt_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ftwdt010_wdt = type { i32 }

@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @ftwdt010_wdt_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ftwdt010_wdt_interrupt(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.ftwdt010_wdt*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.ftwdt010_wdt*
  store %struct.ftwdt010_wdt* %7, %struct.ftwdt010_wdt** %5, align 8
  %8 = load %struct.ftwdt010_wdt*, %struct.ftwdt010_wdt** %5, align 8
  %9 = getelementptr inbounds %struct.ftwdt010_wdt, %struct.ftwdt010_wdt* %8, i32 0, i32 0
  %10 = call i32 @watchdog_notify_pretimeout(i32* %9)
  %11 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %11
}

declare dso_local i32 @watchdog_notify_pretimeout(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
